# docs/swagger.json
@@ -107,6 +107,13 @@
                         "required": true
                     },
                     {
+                        "type": "string",
+                        "description": "future or past",
+                        "name": "direction",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "number of chunk",
                         "name": "chunk_number",
